--- a/fazerPedido.html
+++ b/fazerPedido.html
@@ -21,7 +21,7 @@
           <div class="row">
             <div class="col">
               <a href="index.html" class="navbar-brand">
-                <img width="65px" src="assets/ICONE.png" alt="Campos"> 
+                <img width="65px" src="assets/assets_img/CamadaAR.png" alt="Campos"> 
               </a>
             </div>
             <div class="col">
