--- a/item.html
+++ b/item.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>DM Adesivos</title>
+        <title>AristeuRefrigeracao</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/ICONE.png" />
         <!-- Bootstrap icons-->
@@ -23,7 +23,7 @@
                 <div class="row">
                     <div class="col">
                         <a href="index.html" class="navbar-brand">
-                            <img width="65px" src="assets/ICONE.png" alt="Campos"> 
+                            <img width="65px" src="assets/assets_img/CamadaAR.png" alt="Campos"> 
                         </a>
                     </div>
                     <div class="col">
