--- a/carrinho.html
+++ b/carrinho.html
@@ -15,44 +15,20 @@
     </head>
     <body>
         <!-- Navigation-->
-        <!-- Navigation-->
-        <nav class="fullscreen-image"><!-- navbar-custom-top-header -->
-          <div class="container px-5">
-            <div class="row">
-              <div class="col">
-                <a href="index.html" class="navbar-brand">
-                  <img width="65px" src="assets/assets_img/CamadaAR.png" alt="Campos"> 
-                </a>
-              </div>
-              <div class="col">
-                <div class="d-flex align-items-center">
-                  <!-- Ícones de redes sociais -->
-                  <a href="https://www.facebook.com/dm.adesivoss" target="_blank" class="social-icon me-2">
-                    <span class="social-ico-icon">
-                        <i class="bi bi-facebook"></i>
-                    </span>
-                  </a>
-                  <a href="https://api.whatsapp.com/message/3W6RV5ZMBSXMO1?autoload=1&app_absent=0" target="_blank" class="social-icon me-2">
-                    <span class="social-ico-icon">
-                        <i class="bi bi-whatsapp"></i>
-                    </span>
-                  </a>
-                  <a href="https://www.instagram.com/dmadesivoss/" target="_blank" class="social-icon me-2">
-                    <span class="social-ico-icon">
-                        <i class="bi bi-instagram"></i>
-                    </span>
-                  </a>
-                  <!-- Botão Carrinho -->
-                  <form style="display: flex !important;" action="carrinho.html"> 
-                    <button class="custom-button btn-lg" type="submit">
-                        <i class="bi-cart-fill me-1"></i>
-                        <span class="d-none d-lg-inline">Carrinho</span> <!-- Oculta o texto em dispositivos móveis -->
-                        <span class="badge" id="badgeCart">0</span>
-                    </button>
-                  </form>
-                </div>
-              </div>
-            </div>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary"><!-- navbar-custom-top-header -->
+          <div class="container px-5 FlexBox d-flex align-items-center p-2">
+            <a href="index.html" class="col navbar-brand">
+              <img width="150vw" src="assets/assets_img/CamadaAR.png" alt="Campos"> 
+            </a>
+            <form style="display: flex !important;" action="carrinho.html">
+              <button type="submit" class="btn position-relative custom-button m-2">
+                <span class="d-none d-lg-inline">Carrinho</span> <!-- Oculta o texto em dispositivos móveis -->
+                <i class="bi-cart-fill me-1"></i>
+                <span style="background-color: var(--bs-gray-200);" id="badgeCart" class="position-absolute top-0 start-100 translate-middle badge rounded-pill">
+                  <!-- <span class="visually-hidden">unread messages</span> -->
+                </span>
+              </button>
+            </form>
           </div>
         </nav>
         
