Ajuste das rotas para as redes sociais do site

--- a/index.html
+++ b/index.html
@@ -96,21 +96,6 @@
             <!--<li><a href="#" id="ver_mais_link">Ver mais</a></li>-->
           </ul>
         </div>
-        <!-- <a href="#"  aria-current="page" target="_blank" class="social-icon me-2">
-          <span class="social-ico-icon">
-              <i class="bi bi-facebook"></i>
-          </span>
-        </a>
-        <a href="#" target="_blank" class="social-icon me-2">
-          <span class="social-ico-icon">
-              <i class="bi bi-whatsapp"></i>
-          </span>
-        </a>
-        <a href="#" target="_blank" class="social-icon me-2">
-          <span class="social-ico-icon">
-              <i class="bi bi-instagram"></i>
-          </span>
-        </a> -->
       </nav>
           
         <style>/* Reset CSS */
@@ -354,17 +339,17 @@
         <footer class="py-5 bg-dark">
           <div class="container">
             <div class="text-center" style="text-decoration:none;">
-              <a href="https://www.facebook.com/dm.adesivoss" target="_blank" class="social-icon-footer">
+              <a href="https://www.facebook.com/AristeuRefrigeracao/" target="_blank" class="social-icon-footer">
                 <span class="social-ico-icon">
                     <i class="text-white bi bi-facebook"></i>
                 </span>
               </a>
-              <a href="https://api.whatsapp.com/message/3W6RV5ZMBSXMO1?autoload=1&app_absent=0" target="_blank" class="social-icon-footer">
+              <a href="https://api.whatsapp.com/send/?phone=5592984444694&text&type=phone_number&app_absent=0" target="_blank" class="social-icon-footer">
                 <span class="social-ico-icon">
                     <i class="text-white bi bi-whatsapp"></i>
                 </span>
               </a>
-              <a href="https://www.instagram.com/dmadesivoss/" target="_blank" class="social-icon-footer">
+              <a href="https://www.instagram.com/aristeurefrigeracao/" target="_blank" class="social-icon-footer">
                 <span class="social-ico-icon">
                     <i class="text-white bi bi-instagram"></i>
                 </span>
