--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </head>
     <body>
       <!-- Navigation-->
@@ -62,29 +66,39 @@
         </div>
       </div>
 
-      <!-- <div class="slideshow-container" onchange="showSlides()">
-        <div class="mySlides fade">
-          <div class="numbertext">1 / 3</div>
-          <img src="/assets/assets_img/banner-site.jpg" style="width:100%">
-          <div class="text">Caption Text</div>
-        </div>
-        <div class="mySlides fade">
-          <div class="numbertext">2 / 3</div>
-          <img src="/assets/assets_img/carrinho_vazio.png" style="width:100%">
-          <div class="text">Caption Two</div>
-        </div>
-        <div class="mySlides fade">
-          <div class="numbertext">3 / 3</div>
-          <img src="/assets/assets_img/logo-home.png" style="width:100%">
-          <div class="text">Caption Three</div>
+      <div class="container">  
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+          <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+          </ol>
+      
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner">
+            <div class="item active">
+              <img src="assets/carousel_img/carousel01.jpg" alt="Los Angeles" style="width:100%;">
+            </div>
+            <div class="item">
+              <img src="assets/carousel_img/carousel02.jpg" alt="Chicago" style="width:100%;">
+            </div>
+            <div class="item">
+              <img src="assets/carousel_img/carousel03.jpg" alt="New york" style="width:100%;">
+            </div>
+          </div>
+          <!-- Left and right controls -->
+          <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
       </div>
-      <br>
-      <div style="text-align:center">
-        <span class="dot"></span> 
-        <span class="dot"></span> 
-        <span class="dot"></span> 
-      </div> -->
+
       <div id="filter"></div>
       <nav class="navbar-custom-top-header header" id="filtro">
         <div class="navbar-left-custom-top-header">
