--- a/item.html
+++ b/item.html
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>DM Adesivos</title>
+        <title>Aristeu Refrigeração</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/ICONE.png" />
+        <link rel="icon" type="image/x-icon" href="assets/Logo.png" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -17,45 +17,44 @@
     <body>
         
         <!-- Navigation-->
-        <nav class="fullscreen-image"><!-- navbar-custom-top-header -->
-            <div class="container px-6">
-            <div class="row">
-                <div class="col">
-                <a href="index.html" class="navbar-brand">
-                    <img width="70px" src="assets/ICONE.png" alt="Campos"> 
-                </a>
+        <nav class="container"><!-- navbar-custom-top-header -->
+            <div class="navbar-custom-top-header" style="background: var(--bs-body-bg); gap: 20px;">
+                <!-- IMAGEM -->
+                <div class="navbar-right-custom-top-header">
+                    <a href="index.html" class="navbar-brand">
+                        <img class="navbarTopImage" src="assets/ICONE.png" alt="Campos"> 
+                    </a>
                 </div>
-                <div class="col">
-                <div class="d-flex align-items-center">
-                    <!-- Ícones de redes sociais -->
-                    <a href="https://www.facebook.com/AristeuRefrigeracao/" target="_blank" class="social-icon me-2">
-                    <span class="social-ico-icon">
-                        <i class="bi bi-facebook"></i>
-                    </span>
-                    </a>
-                    <a href="https://api.whatsapp.com/send/?phone=5592984444694&text&type=phone_number&app_absent=0" target="_blank" class="social-icon me-2">
-                    <span class="social-ico-icon">
-                        <i class="bi bi-whatsapp"></i>
-                    </span>
-                    </a>
-                    <a href="https://www.instagram.com/aristeurefrigeracao/" target="_blank" class="social-icon me-2">
-                    <span class="social-ico-icon">
-                        <i class="bi bi-instagram"></i>
-                    </span>
-                    </a>
-                    <!-- Botão Carrinho -->
-                    <form style="display: flex !important;" action="carrinho.html">
-                    <button type="submit" class="btn position-relative custom-button m-2">
-                        <span class="d-none d-lg-inline">Carrinho</span> <!-- Oculta o texto em dispositivos móveis -->
-                        <i class="bi-cart-fill me-1"></i>
-                        <span style="background-color: var(--bs-gray-100);" id="badgeCart" class="position-absolute top-0 start-100 translate-middle badge rounded-pill">
-                        <!-- <span class="visually-hidden">unread messages</span> -->
+                <div class="navbar-left-custom-top-header">
+                    <div style="gap: 10px;" class="d-flex align-items-center">
+                        <!-- Ícones de redes sociais -->
+                        <a href="https://www.facebook.com/AristeuRefrigeracao/" target="_blank" class="social-icon me-2">
+                        <span class="social-ico-icon">
+                            <i class="bi bi-facebook"></i>
                         </span>
-                    </button>
-                    </form>
+                        </a>
+                        <a href="https://api.whatsapp.com/send/?phone=5592984444694&text&type=phone_number&app_absent=0" target="_blank" class="social-icon me-2">
+                        <span class="social-ico-icon">
+                            <i class="bi bi-whatsapp"></i>
+                        </span>
+                        </a>
+                        <a href="https://www.instagram.com/aristeurefrigeracao/" target="_blank" class="social-icon me-2">
+                        <span class="social-ico-icon">
+                            <i class="bi bi-instagram"></i>
+                        </span>
+                        </a>
+                        <!-- Botão Carrinho -->
+                        <form style="display: flex !important;" action="carrinho.html">
+                            <button type="submit" class="btn position-relative text-dark"> <!-- custom-button -->
+                            <!--<span class="d-none d-lg-inline">Carrinho</span>  Oculta o texto em dispositivos móveis -->
+                            <h4><i class="bi-cart-fill me-1"></i></h4>
+                            <span id="badgeCart" class="position-absolute top-50 start-50 translate-middle badge rounded-pill bg-danger text-white">
+                            <!-- <span class="visually-hidden">unread messages</span> -->
+                            </span>
+                            </button>
+                        </form>
+                    </div>
                 </div>
-                </div>
-            </div>
             </div>
         </nav>
         <!-- Header-->
