Formatação Monetária dos produtos

--- a/fazerPedido.html
+++ b/fazerPedido.html
@@ -188,7 +188,7 @@
               Voltar
             </a>
               
-              <a id="btnEtapaResumo" class="btn btn-outline-dark flex-shrink-1 mb-3"  type="button" href="">
+              <a id="btnEtapaResumo" target="_blank" class="btn btn-outline-dark flex-shrink-1 mb-3"  type="button" href="">
                 <i class="bi-cart-fill me-1"></i>
                 Enviar Pedido
               </a>
