--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
               </button>
             </form>
             <!-- Header-->
+            <a href="https://api.whatsapp.com/send/?phone=559284001860" class="float-petzap custom-button-petzap"
+              target="_blank" type="submit" id="float-button-petzap">
+              <img src="assets/assets_img/whatsapp.png" alt="" width="100%">
+            </a>
             <button class="float-button custom-button btn-lg" type="submit" id="float-button-carrinho">
               <i class="text-white bi-cart-fill me-1"></i>
               <span class="badge" id="badgeCartFloat">0</span>
