--- a/carrinho.html
+++ b/carrinho.html
@@ -61,7 +61,7 @@
       <div class="container px-4 px-lg-5 mt-5">
         <div class="d-flex justify-content-between align-items-center">
           <h2 class="fw-bolder mb-4">Produtos no Carrinho</h2>
-          <h2 id="total-carrinho" class="fw-bolder mb-4">Total : </h2>
+          <h2 id="total-carrinho" class="fw-bolder mb-4"></h2>
         </div>
         <div id="div-de-alerta">
           <div class="card mb-4">
