Ajuste do layout do catalogo
Ajuste do layout do catalogo

--- a/item.html
+++ b/item.html
@@ -58,6 +58,10 @@
             </div>
         </nav>
         <!-- Header-->
+        <a href="https://api.whatsapp.com/send/?phone=5592984444694" class="float-aristeu custom-button-petzap"
+            target="_blank" type="submit">
+            <img src="assets/assets_img/whatsapp.png" alt="" width="100%">
+        </a>
         <button class="float-button custom-button btn-lg" type="submit" id="float-button-carrinho">
             <i class="text-white bi-cart-fill me-1"></i>
             <span class="badge" id="badgeCartFloat">0</span>
