--- a/item.html
+++ b/item.html
@@ -118,9 +118,9 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script type="text/javascript" src="js/jquery-3.7.1.js"></script>
-        <script type="text/javascript" src="js/dados.js"></script>
-        <script type="text/javascript" src="js/carrinho.js"></script>
-        <script type="text/javascript" src="js/item.js"></script>
+        <script type="text/javascript" src="/js/jquery-3.7.1.js"></script>
+        <script type="text/javascript" src="/js/dados.js"></script>
+        <script type="text/javascript" src="/js/carrinho.js"></script>
+        <script type="text/javascript" src="/js/item.js"></script>
     </body>
 </html>
