Ajuste no select options
Reajuste na forma como os preços são apresentados, para mostrar só após a seleção da medida

--- a/carrinho.html
+++ b/carrinho.html
@@ -73,8 +73,8 @@
             <!-- Lista -->
           </div>
           <div class="container-button-cart">
-            <a class="btn btn-outline-dark flex-shrink-1 mb-3"  type="button" href="index.html"
-              onclick="loja.metodos.obterValorTotal()">
+            <a class="btn btn-outline-dark flex-shrink-1 mb-3"  type="button"
+              onclick="loja.metodos.voltarParaAnterior()">
               <i class="bi bi-arrow-90deg-left"></i>
               Continuar Comprando
             </a>
